src/main/resources/tests/Semantics/bad/operationBool6.canAda
with Ada.Text_IO; use Ada.Text_IO;
procedure ExampleProcedure is
X : boolean;
begin
   X := true or else 2;
end ExampleProcedure;
